2008.1.01
---------

* Ticket BZ2127: 
  Adjusted column descriptions for derived columns, so that if the JDBC 
  results supply the source expression for that column, it is included
  in the output column description.

* Ticket BZ2657: 
  Adjusted HTML results output to show published table and column names 
  rather than internal table and column IDs. 

* Ticket BZ2720: 
* Ticket BZ2721: 
  Adjusted HTML and VOTable output so that catalog, table and column names 
  are visible for all (recognised) non-derived columns.  In the VOTable
  view, this information is present both in each field's ID attribute
  and in the field DESCRIPTION tag.

* Ticket BZ2759:
  Adjusted results processing so that data type of unrecognised columns 
  (e.g. derived columns) is obtained (where possible) from JDBC results;
  it was erroneously defaulting to "String" for all unrecognised columns.

* Ticket BZ2036:
* Ticket BZ2643:
  Webapp JSP pages now using standard container security rather than 
  custom login forms, for consistency with other webapps and better 
  browser behaviour.  This has fixed the login problems previously 
  seen with the Opera browser.

2008.1
------
Official launch release.  