@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.25 2008/06/05 13:43:40 gtr Exp $
+# $Id: project.properties,v 1.26 2008/07/10 13:54:11 clq2 Exp $
 
 #
 # multiproject
@@ -43,9 +43,10 @@ astrogrid.workflowobjects.version = 2007.2wo
 astrogrid.scripting.version = 2007.2s
 astrogrid.eXist.version = 2007.2e
 astrogrid.registry.version = 2008.0a3r
-astrogrid.community.version = 2008.0
+astrogrid.community.version = 2008.0.01
 astrogrid.filestore.version = 2007.2.01fs
-astrogrid.filemanager.version = 2008.0b1
+#new filemanager versions - note that filemanager.version only applies to the delegate - the filemanager.frozen.version applies to all other components
+astrogrid.filemanager.version = 2008.0b2
 astrogrid.filemanager.frozen.version=2007.2.01fm
 
 astrogrid.security.version = 2008.2.a02
@@ -60,7 +61,7 @@ astrogrid.xmldb.version= 2007.2xml
 astrogrid.contracts.version= 2008.0a2
 
 # Release/Stable versions (rename to .stable at some point?)
-astrogrid.pal.version= 2008.1.01
+astrogrid.pal.version= 2008.0.2
 astrogrid.config.stable= 2007.2cfg
 astrogrid.utils.stable= 2007.2ut
 astrogrid.xml.stable= 2007.2xml
